# rstmplate

./: .dockerignore  .env  .gitignore  Cargo.toml  dockerfile  readme.md
.github/workflows/: build.yml
api/: Cargo.toml
api/src/: lib.rs  middleware.rs  token.rs
blind/: Cargo.toml
blind/src/: lib.rs
common/: Cargo.toml
common/src/: error.rs  jwt.rs  lib.rs  macros.rs  password.rs  plugin_config.rs  state.rs
i18n/: Cargo.toml
locales/: app.yml
migrations/: 20250811142308_initalize.down.sql  20250811142308_initalize.up.sql
models/: Cargo.toml
models/src/: lib.rs  user.rs
plugin/: Cargo.toml  README.md
plugin/src/: lib.rs  main.rs
plugins-dev/blind/: Cargo.toml
plugins-dev/blind/assets/: main.js
plugins-dev/blind/src/: lib.rs
plugins-dev/plugin-auth/: Cargo.toml
plugins-dev/plugin-auth/src/: lib.rs
src/: main.rs  plugin_loader.rs
web/: angular.json  package-lock.json
