[workspace]
resolver = "3"
members = ["api", "common", "models"]

[package]
name = "rstmplate"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "./api" }
models = { path = "./models" }
common = { path = "./common" }
tokio = { workspace = true, features = ["full"]  }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "any", "postgres"] }
dotenvy = { workspace = true }
axum = { workspace = true }

[workspace.dependencies]
axum = "0.8.4"
axum-extra = "0.10.1"
http-body-util = "0.1.3"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = "0.15.7"
thiserror = "=1.0.24"