[workspace]
resolver = "3"
members = ["api", "common", "models", "plugin", "plugins-dev/plugin-auth", "plugins-dev/blind"]

[package]
name = "rstmplate"
version = "0.1.0"
edition = "2024"

[package.metadata.i18n]
available-locales = ["en", "zh"]
default-locale = "zh"
load-path = "locales"
minify-key = true
minify-key-len = 12
minify-key-thresh = 4

[dependencies]
api = { path = "./api" }
models = { path = "./models" }
common = { path = "./common" }
plugin = { path = "plugin" }
tokio = { workspace = true, features = ["full"]  }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "any", "postgres"] }
dotenvy = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
libloading = { workspace = true }
tokio-util = { workspace = true }

[workspace.dependencies]
axum = "0.8.4"
axum-extra = "0.10.1"
http-body-util = "0.1.3"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = "0.15.7"
thiserror = "=1.0.24"
time = "0.3.41"
serde_with = "3.14.0"
uuid = "1.18.0"
regex = "1.11.1"
argon2 = { version = "0.5.3", features = ["rand"] }
anyhow = "1.0.99"
rand = "0.9.2"
jsonwebtoken = "9.3.1"
libloading = "0.8.8"
futures = "0.3.31"
tokio-util = "0.7.16"
