[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "any", "postgres"] }
validator = { workspace = true, features = ["derive"] }
argon2 = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }