[package]
name = "plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
common = { path="../common" }
futures = { workspace = true }
tower = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
clap_derive = { version = "4.0.0-rc.1" }
clap = { version = "4.5.45", features = ["derive"] }
rand_core = { version = "0.6.4" }
rand = "0.8.5"