[package]
name = "blind"
version = "0.1.0"
edition = "2024"

[dependencies]
plugin = { path = "../../plugin" }
axum = { workspace = true }
common = { path = "../../common" }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed"] }
mime_guess = { workspace = true }


[lib]
crate-type = ["cdylib"]